# pdfkb-mcp

./: .bumpversion.cfg  .dockerignore  .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  LICENSE  README.md  WARP.md  build-docker.sh  docker-compose.dev.yml  docker-compose.sample.yml  docker-compose.yml  docker-entrypoint.sh  fix_markdown_tests.py  pyproject.toml  run-local.sh  simple_test_descriptions.py  test-docker.sh  test_container.sh  test_mcp_rescan.py  test_tool_descriptions.py
.github/: copilot-instructions.md
.github/instructions/: agent_prompt.txt
.github/prompts/: README.md  agent_prompt.md  agent_prompt.prompt.md
.github/workflows/: build-and-smoke.yml  ci.yml  docker.yml  ghcr-cleanup.yml  image-nightly.yml  image-smoke.yml  integration-smoke.yml  publish.yml  release.yml  run-tests.yml
.kilocode/rules/: debugging.md  dev.md  general.md
.tmp_stubs/unstructured/partition/: pdf.py
docs/: LOCAL_ACTIONS.md  context-shift.md  design.md  parsers.md  remote-buildx.md  self-hosted-runner.md  web-server-architecture-continued.md  web-server-architecture.md
docs/userguide/: advanced.md  configuration.md  docker-deployment.md  embeddings.md  index.md  installation.md  mcp-clients.md  parsers.md  quick-start.md  search-features.md  troubleshooting.md  web-interface.md
infra/cloud-init/: self-hosted-runner-userdata-fetch-token.yaml  self-hosted-runner-userdata.yaml
infra/proxmox/: README.md  create-runner-vm.sh  render-cloudinit.sh
scripts/: build_and_test_image.sh  ci-parser-check.sh  local-build-and-monitor.sh  monitor_ci.sh  run_marker_parse.py  save_local_state.sh
src/pdfkb/: __init__.py  background_queue.py  config.py  context_shift.py  document_processor.py  embeddings.py  embeddings_base.py  embeddings_factory.py  embeddings_huggingface.py  embeddings_local.py  embeddings_openai.py  exceptions.py  file_monitor.py  hybrid_search.py  intelligent_cache.py  main.py  models.py  pdf_processor.py  reranker_base.py  reranker_deepinfra.py  reranker_factory.py  reranker_local.py  summarizer_base.py  summarizer_factory.py  summarizer_local.py  summarizer_remote.py  text_index.py  vector_store.py  web_server.py
src/pdfkb/chunker/: __init__.py  chunker.py  chunker_langchain.py  chunker_page.py  chunker_semantic.py  chunker_unstructured.py  langchain_embeddings_wrapper.py
src/pdfkb/parsers/: __init__.py  parser.py  parser_docling.py  parser_llm.py  parser_markdown.py  parser_marker.py  parser_mineru.py  parser_pymupdf4llm.py  parser_unstructured.py
src/pdfkb/parsers/templates/: metadata_extraction.j2  page_transcription.j2
src/pdfkb/web/: __init__.py  middleware.py  server.py  websocket_handlers.py
src/pdfkb/web/models/: __init__.py  web_models.py
src/pdfkb/web/services/: __init__.py  web_document_service.py  web_search_service.py  web_status_service.py  websocket_manager.py
src/webui/: README.md  app.js  index.html  performance.js  styles.css  test_frontend.py
src/webui/components/: DocumentDetail.js  DocumentList.js  FileUpload.js  SearchInterface.js  StatusBar.js
tests/: __init__.py  conftest.py  test_basic_web_integration.py  test_chunker_unstructured.py  test_config_changes.py  test_context_shift.py  test_datetime_timezone.py  test_deduplication.py  test_docling_integration.py  test_docling_parser.py  test_document_processor_markdown.py  test_embeddings.py  test_file_monitor.py  test_huggingface_embeddings.py  test_hybrid_search.py  test_integration_hybrid.py  test_intelligent_cache.py  test_local_embeddings.py  test_markdown_parser.py  test_marker_fallback.py  test_mcp_resources.py  test_min_chunk_size_filtering.py  test_openai_custom_endpoint.py  test_page_chunker.py  test_page_chunker_integration.py  test_pdf_parser.py  test_pdf_processor.py  test_reranker_deepinfra.py  test_reranker_factory.py  test_semantic_chunker.py  test_smoke_default.py  test_sse_integration.py  test_summarizer_base.py  test_summarizer_factory.py  test_summarizer_remote.py  test_text_index.py  test_vector_store.py  test_web_integration.py
